Fixed compilation errors; added alternate to cmake

--- a/examples/QTLSim/CMakeLists.txt
+++ b/examples/QTLSim/CMakeLists.txt
@@ -149,7 +149,7 @@ SET_TARGET_PROPERTIES(QTLSimMT_debug PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALI
 TARGET_LINK_LIBRARIES(QTLSimMT_debug ${LOCAL_LIBS} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
 
 ADD_EXECUTABLE( QTLSimMT_batch qtlsim_main.cpp ${OPTIONS_SRC} qtlsim_logger.cpp )
-SET_TARGET_PROPERTIES(QTLSimMT_batch PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK;USE_MT;USE_BATCH_JOBS" LINK_FLAGS "-Wl,--no-as-needed" )
+SET_TARGET_PROPERTIES(QTLSimMT_batch PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK;USE_MT;USE_BATCH_JOBS;USE_VECTOR_ARRAY" LINK_FLAGS "-Wl,--no-as-needed" )
 #TARGET_LINK_LIBRARIES(QTLSimMT_batch ${LOCAL_LIBS} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
 
 TARGET_LINK_LIBRARIES(QTLSimMT_batch ${LOCAL_LIBS} ${Boost_CHRONO_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
