Commented out unused programs in Cmake file. Added compilation option to switch between having pooled crossover events. Added/removed commments

--- a/examples/QTLSim/CMakeLists.txt
+++ b/examples/QTLSim/CMakeLists.txt
@@ -61,52 +61,52 @@ TARGET_LINK_LIBRARIES(qtl_cuda_unordered ${CUDA_LOCAL_LIBS})
 ##SET_TARGET_PROPERTIES( qtl_thrust PROPERTIES CUDA_NVCC_FLAGS "-gencode=arch=compute_30,code=sm_30" )
 #TARGET_LINK_LIBRARIES(qtl_cuda_unit_ordered ${CUDA_LOCAL_LIBS})
 
-CUDA_ADD_EXECUTABLE(qtl_cuda_unordered_verbose ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DDUMP_HEAP_VARIABLES)
-SET_TARGET_PROPERTIES( qtl_cuda_unordered_verbose PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
-#SET_TARGET_PROPERTIES( qtl_thrust PROPERTIES CUDA_NVCC_FLAGS "-gencode=arch=compute_30,code=sm_30" )
-TARGET_LINK_LIBRARIES(qtl_cuda_unordered_verbose ${CUDA_LOCAL_LIBS})
+#CUDA_ADD_EXECUTABLE(qtl_cuda_unordered_verbose ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DDUMP_HEAP_VARIABLES)
+#SET_TARGET_PROPERTIES( qtl_cuda_unordered_verbose PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
+##SET_TARGET_PROPERTIES( qtl_thrust PROPERTIES CUDA_NVCC_FLAGS "-gencode=arch=compute_30,code=sm_30" )
+#TARGET_LINK_LIBRARIES(qtl_cuda_unordered_verbose ${CUDA_LOCAL_LIBS})
 
-CUDA_ADD_EXECUTABLE(qtl_cuda_unordered_double ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DUSE_DOUBLE_REAL)
-SET_TARGET_PROPERTIES( qtl_cuda_unordered_double PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
-#SET_TARGET_PROPERTIES( qtl_thrust PROPERTIES CUDA_NVCC_FLAGS "-gencode=arch=compute_30,code=sm_30" )
-TARGET_LINK_LIBRARIES(qtl_cuda_unordered_double ${CUDA_LOCAL_LIBS})
+#CUDA_ADD_EXECUTABLE(qtl_cuda_unordered_double ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DUSE_DOUBLE_REAL)
+#SET_TARGET_PROPERTIES( qtl_cuda_unordered_double PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
+##SET_TARGET_PROPERTIES( qtl_thrust PROPERTIES CUDA_NVCC_FLAGS "-gencode=arch=compute_30,code=sm_30" )
+#TARGET_LINK_LIBRARIES(qtl_cuda_unordered_double ${CUDA_LOCAL_LIBS})
 
-ADD_CUSTOM_TARGET( qtl_cuda DEPENDS qtl_cuda_unordered qtl_cuda_unordered_verbose qtl_cuda_unordered_double )
+#ADD_CUSTOM_TARGET( qtl_cuda DEPENDS qtl_cuda_unordered qtl_cuda_unordered_verbose qtl_cuda_unordered_double )
+#
+#CUDA_ADD_EXECUTABLE(qtl_cuda_unordered_offcross ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DUSE_OFFSPRING_CROSSOVER )
+#SET_TARGET_PROPERTIES( qtl_cuda_unordered_offcross PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
+##SET_TARGET_PROPERTIES( qtl_thrust PROPERTIES CUDA_NVCC_FLAGS "-gencode=arch=compute_30,code=sm_30" )
+#TARGET_LINK_LIBRARIES(qtl_cuda_unordered_offcross ${CUDA_LOCAL_LIBS})
 
-CUDA_ADD_EXECUTABLE(qtl_cuda_unordered_offcross ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DUSE_OFFSPRING_CROSSOVER )
-SET_TARGET_PROPERTIES( qtl_cuda_unordered_offcross PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
-#SET_TARGET_PROPERTIES( qtl_thrust PROPERTIES CUDA_NVCC_FLAGS "-gencode=arch=compute_30,code=sm_30" )
-TARGET_LINK_LIBRARIES(qtl_cuda_unordered_offcross ${CUDA_LOCAL_LIBS})
+#CUDA_ADD_EXECUTABLE(qtl_cuda_unordered_ham3 ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DHAMMING_VERSION=3)
+#SET_TARGET_PROPERTIES( qtl_cuda_unordered_ham3 PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
+##SET_TARGET_PROPERTIES( qtl_thrust PROPERTIES CUDA_NVCC_FLAGS "-gencode=arch=compute_30,code=sm_30" )
+#TARGET_LINK_LIBRARIES(qtl_cuda_unordered_ham3 ${CUDA_LOCAL_LIBS})
 
-CUDA_ADD_EXECUTABLE(qtl_cuda_unordered_ham3 ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DHAMMING_VERSION=3)
-SET_TARGET_PROPERTIES( qtl_cuda_unordered_ham3 PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
-#SET_TARGET_PROPERTIES( qtl_thrust PROPERTIES CUDA_NVCC_FLAGS "-gencode=arch=compute_30,code=sm_30" )
-TARGET_LINK_LIBRARIES(qtl_cuda_unordered_ham3 ${CUDA_LOCAL_LIBS})
+#CUDA_ADD_EXECUTABLE(qtl_cuda_unordered_ham ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DHAMMING_VERSION)
+#SET_TARGET_PROPERTIES( qtl_cuda_unordered_ham PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
+#TARGET_LINK_LIBRARIES(qtl_cuda_unordered_ham ${CUDA_LOCAL_LIBS})
 
-CUDA_ADD_EXECUTABLE(qtl_cuda_unordered_ham ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DHAMMING_VERSION)
-SET_TARGET_PROPERTIES( qtl_cuda_unordered_ham PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
-TARGET_LINK_LIBRARIES(qtl_cuda_unordered_ham ${CUDA_LOCAL_LIBS})
+#CUDA_ADD_EXECUTABLE(qtl_cuda_unordered_ham4 ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DHAMMING_VERSION=4)
+#SET_TARGET_PROPERTIES( qtl_cuda_unordered_ham4 PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
+##SET_TARGET_PROPERTIES( qtl_thrust PROPERTIES CUDA_NVCC_FLAGS "-gencode=arch=compute_30,code=sm_30" )
+#TARGET_LINK_LIBRARIES(qtl_cuda_unordered_ham4 ${CUDA_LOCAL_LIBS})
 
-CUDA_ADD_EXECUTABLE(qtl_cuda_unordered_ham4 ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DHAMMING_VERSION=4)
-SET_TARGET_PROPERTIES( qtl_cuda_unordered_ham4 PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
-#SET_TARGET_PROPERTIES( qtl_thrust PROPERTIES CUDA_NVCC_FLAGS "-gencode=arch=compute_30,code=sm_30" )
-TARGET_LINK_LIBRARIES(qtl_cuda_unordered_ham4 ${CUDA_LOCAL_LIBS})
+#CUDA_ADD_EXECUTABLE(qtl_cuda_unordered_xover2 ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DCROSSOVER_VERSION=2 )
+#SET_TARGET_PROPERTIES( qtl_cuda_unordered_xover2 PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
+#TARGET_LINK_LIBRARIES(qtl_cuda_unordered_xover2 ${CUDA_LOCAL_LIBS})
 
-CUDA_ADD_EXECUTABLE(qtl_cuda_unordered_xover2 ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DCROSSOVER_VERSION=2 )
-SET_TARGET_PROPERTIES( qtl_cuda_unordered_xover2 PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
-TARGET_LINK_LIBRARIES(qtl_cuda_unordered_xover2 ${CUDA_LOCAL_LIBS})
+#CUDA_ADD_EXECUTABLE(qtl_cuda_unordered_xover3 ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DCROSSOVER_VERSION=3 )
+#SET_TARGET_PROPERTIES( qtl_cuda_unordered_xover3 PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
+#TARGET_LINK_LIBRARIES(qtl_cuda_unordered_xover3 ${CUDA_LOCAL_LIBS})
 
-CUDA_ADD_EXECUTABLE(qtl_cuda_unordered_xover3 ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DCROSSOVER_VERSION=3 )
-SET_TARGET_PROPERTIES( qtl_cuda_unordered_xover3 PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
-TARGET_LINK_LIBRARIES(qtl_cuda_unordered_xover3 ${CUDA_LOCAL_LIBS})
+#CUDA_ADD_EXECUTABLE(qtl_cuda_unordered_xover4 ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DCROSSOVER_VERSION=4 )
+#SET_TARGET_PROPERTIES( qtl_cuda_unordered_xover4 PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
+#TARGET_LINK_LIBRARIES(qtl_cuda_unordered_xover4 ${CUDA_LOCAL_LIBS})
 
-CUDA_ADD_EXECUTABLE(qtl_cuda_unordered_xover4 ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DCROSSOVER_VERSION=4 )
-SET_TARGET_PROPERTIES( qtl_cuda_unordered_xover4 PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
-TARGET_LINK_LIBRARIES(qtl_cuda_unordered_xover4 ${CUDA_LOCAL_LIBS})
-
-#CUDA_ADD_EXECUTABLE(qtl_cuda_unit_ordered_xover2 ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DUSE_UNIT_ORDERING;-DCROSSOVER_VERSION=2)
-#SET_TARGET_PROPERTIES( qtl_cuda_unit_ordered_xover2 PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
-#TARGET_LINK_LIBRARIES(qtl_cuda_unit_ordered_xover2 ${CUDA_LOCAL_LIBS})
+##CUDA_ADD_EXECUTABLE(qtl_cuda_unit_ordered_xover2 ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DUSE_UNIT_ORDERING;-DCROSSOVER_VERSION=2)
+##SET_TARGET_PROPERTIES( qtl_cuda_unit_ordered_xover2 PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
+##TARGET_LINK_LIBRARIES(qtl_cuda_unit_ordered_xover2 ${CUDA_LOCAL_LIBS})
 
 CUDA_ADD_EXECUTABLE(QTLSimCuda ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DCROSSOVER_VERSION=4)
 SET_TARGET_PROPERTIES(QTLSimCuda PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
@@ -118,46 +118,44 @@ LIST(APPEND LOCAL_LIBS ${COMMON_LIBRARIES})
 
 SET(SIM_SRC main.cpp)
 
-ADD_EXECUTABLE( QTLSim ${SIM_SRC} ${OPTIONS_SRC} )
-SET_TARGET_PROPERTIES(QTLSim PROPERTIES COMPILE_DEFINITIONS "USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR" LINK_FLAGS "-Wl,--no-as-needed" )
-TARGET_LINK_LIBRARIES(QTLSim ${LOCAL_LIBS})
+#ADD_EXECUTABLE( QTLSim ${SIM_SRC} ${OPTIONS_SRC} )
+#SET_TARGET_PROPERTIES(QTLSim PROPERTIES COMPILE_DEFINITIONS "USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR" LINK_FLAGS "-Wl,--no-as-needed" )
+#TARGET_LINK_LIBRARIES(QTLSim ${LOCAL_LIBS})
 
 SET(SIM_SRC qtlsim_main.cpp)
 
-ADD_EXECUTABLE( QTLSim2 ${SIM_SRC} ${OPTIONS_SRC} )
-SET_TARGET_PROPERTIES(QTLSim2 PROPERTIES COMPILE_DEFINITIONS "USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR" LINK_FLAGS "-Wl,--no-as-needed" )
-TARGET_LINK_LIBRARIES(QTLSim2 ${LOCAL_LIBS})
+#ADD_EXECUTABLE( QTLSim2 ${SIM_SRC} ${OPTIONS_SRC} )
+#SET_TARGET_PROPERTIES(QTLSim2 PROPERTIES COMPILE_DEFINITIONS "USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR" LINK_FLAGS "-Wl,--no-as-needed" )
+#TARGET_LINK_LIBRARIES(QTLSim2 ${LOCAL_LIBS})
 
-ADD_EXECUTABLE( QTLSim2_row_aligned ${SIM_SRC} ${OPTIONS_SRC} qtlsim_logger.cpp )
-SET_TARGET_PROPERTIES(QTLSim2_row_aligned PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK" LINK_FLAGS "-Wl,--no-as-needed" )
-TARGET_LINK_LIBRARIES(QTLSim2_row_aligned ${LOCAL_LIBS} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
+#ADD_EXECUTABLE( QTLSim2_row_aligned ${SIM_SRC} ${OPTIONS_SRC} qtlsim_logger.cpp )
+#SET_TARGET_PROPERTIES(QTLSim2_row_aligned PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK" LINK_FLAGS "-Wl,--no-as-needed" )
+#TARGET_LINK_LIBRARIES(QTLSim2_row_aligned ${LOCAL_LIBS} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
 
-ADD_EXECUTABLE( QTLSim2_row_aligned_debug ${SIM_SRC} ${OPTIONS_SRC} qtlsim_logger.cpp )
-SET_TARGET_PROPERTIES(QTLSim2_row_aligned_debug PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;DEBUG_MODE;BOOST_LOG_DYN_LINK" LINK_FLAGS "-Wl,--no-as-needed" )
-TARGET_LINK_LIBRARIES(QTLSim2_row_aligned_debug ${LOCAL_LIBS} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
+#ADD_EXECUTABLE( QTLSim2_row_aligned_debug ${SIM_SRC} ${OPTIONS_SRC} qtlsim_logger.cpp )
+#SET_TARGET_PROPERTIES(QTLSim2_row_aligned_debug PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;DEBUG_MODE;BOOST_LOG_DYN_LINK" LINK_FLAGS "-Wl,--no-as-needed" )
+#TARGET_LINK_LIBRARIES(QTLSim2_row_aligned_debug ${LOCAL_LIBS} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
 
-ADD_EXECUTABLE( QTLSim2_row_vector ${SIM_SRC} ${OPTIONS_SRC} )
-SET_TARGET_PROPERTIES(QTLSim2_row_vector PROPERTIES COMPILE_DEFINITIONS "USE_ROW_VECTOR;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR" LINK_FLAGS "-Wl,--no-as-needed" )
-TARGET_LINK_LIBRARIES(QTLSim2_row_vector ${LOCAL_LIBS})
+#ADD_EXECUTABLE( QTLSim2_row_vector ${SIM_SRC} ${OPTIONS_SRC} )
+#SET_TARGET_PROPERTIES(QTLSim2_row_vector PROPERTIES COMPILE_DEFINITIONS "USE_ROW_VECTOR;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR" LINK_FLAGS "-Wl,--no-as-needed" )
+#TARGET_LINK_LIBRARIES(QTLSim2_row_vector ${LOCAL_LIBS})
+
+#ADD_EXECUTABLE( QTLSimMT qtlsim_main.cpp ${OPTIONS_SRC} qtlsim_logger.cpp )
+#SET_TARGET_PROPERTIES(QTLSimMT PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK;USE_MT" LINK_FLAGS "-Wl,--no-as-needed" )
+#TARGET_LINK_LIBRARIES(QTLSimMT ${LOCAL_LIBS} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
+
+#ADD_EXECUTABLE( QTLSimMT_debug qtlsim_main.cpp ${OPTIONS_SRC} qtlsim_logger.cpp )
+#SET_TARGET_PROPERTIES(QTLSimMT_debug PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK;USE_MT;DEBUG_MODE" LINK_FLAGS "-Wl,--no-as-needed" )
+#TARGET_LINK_LIBRARIES(QTLSimMT_debug ${LOCAL_LIBS} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
 
 ADD_EXECUTABLE( QTLSimMT qtlsim_main.cpp ${OPTIONS_SRC} qtlsim_logger.cpp )
-SET_TARGET_PROPERTIES(QTLSimMT PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK;USE_MT" LINK_FLAGS "-Wl,--no-as-needed" )
-TARGET_LINK_LIBRARIES(QTLSimMT ${LOCAL_LIBS} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
+SET_TARGET_PROPERTIES(QTLSimMT PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK;USE_MT;USE_BATCH_JOBS;USE_CROSSOVER_EVENT_POOLING" LINK_FLAGS "-Wl,--no-as-needed" )
+TARGET_LINK_LIBRARIES(QTLSimMT ${LOCAL_LIBS} ${Boost_CHRONO_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
+
+#ADD_EXECUTABLE( QTLSimMT_batch_vector qtlsim_main.cpp ${OPTIONS_SRC} qtlsim_logger.cpp )
+#SET_TARGET_PROPERTIES(QTLSimMT_batch_vector PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK;USE_MT;USE_BATCH_JOBS;USE_VECTOR_ARRAY" LINK_FLAGS "-Wl,--no-as-needed" )
+#TARGET_LINK_LIBRARIES(QTLSimMT_batch_vector ${LOCAL_LIBS} ${Boost_CHRONO_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
 
 ADD_EXECUTABLE( QTLSimMT_debug qtlsim_main.cpp ${OPTIONS_SRC} qtlsim_logger.cpp )
-SET_TARGET_PROPERTIES(QTLSimMT_debug PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK;USE_MT;DEBUG_MODE" LINK_FLAGS "-Wl,--no-as-needed" )
+SET_TARGET_PROPERTIES(QTLSimMT_debug PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK;USE_MT;USE_BATCH_JOBS;DEBUG_MODE" LINK_FLAGS "-Wl,--no-as-needed" )
 TARGET_LINK_LIBRARIES(QTLSimMT_debug ${LOCAL_LIBS} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
-
-ADD_EXECUTABLE( QTLSimMT_batch qtlsim_main.cpp ${OPTIONS_SRC} qtlsim_logger.cpp )
-SET_TARGET_PROPERTIES(QTLSimMT_batch PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK;USE_MT;USE_BATCH_JOBS" LINK_FLAGS "-Wl,--no-as-needed" )
-#TARGET_LINK_LIBRARIES(QTLSimMT_batch ${LOCAL_LIBS} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
-
-TARGET_LINK_LIBRARIES(QTLSimMT_batch ${LOCAL_LIBS} ${Boost_CHRONO_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
-
-ADD_EXECUTABLE( QTLSimMT_batch_vector qtlsim_main.cpp ${OPTIONS_SRC} qtlsim_logger.cpp )
-SET_TARGET_PROPERTIES(QTLSimMT_batch_vector PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK;USE_MT;USE_BATCH_JOBS;USE_VECTOR_ARRAY" LINK_FLAGS "-Wl,--no-as-needed" )
-TARGET_LINK_LIBRARIES(QTLSimMT_batch_vector ${LOCAL_LIBS} ${Boost_CHRONO_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
-
-ADD_EXECUTABLE( QTLSimMT_batch_debug qtlsim_main.cpp ${OPTIONS_SRC} qtlsim_logger.cpp )
-SET_TARGET_PROPERTIES(QTLSimMT_batch_debug PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK;USE_MT;USE_BATCH_JOBS;DEBUG_MODE" LINK_FLAGS "-Wl,--no-as-needed" )
-TARGET_LINK_LIBRARIES(QTLSimMT_batch_debug ${LOCAL_LIBS} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
