--- a/examples/QTLSim/CMakeLists.txt
+++ b/examples/QTLSim/CMakeLists.txt
@@ -159,3 +159,7 @@ TARGET_LINK_LIBRARIES(QTLSimMT ${LOCAL_LIBS} ${Boost_CHRONO_LIBRARY} ${Boost_THR
 ADD_EXECUTABLE( QTLSimMT_debug qtlsim_main.cpp ${OPTIONS_SRC} qtlsim_logger.cpp )
 SET_TARGET_PROPERTIES(QTLSimMT_debug PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK;USE_MT;USE_BATCH_JOBS;DEBUG_MODE" LINK_FLAGS "-Wl,--no-as-needed" )
 TARGET_LINK_LIBRARIES(QTLSimMT_debug ${LOCAL_LIBS} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
+
+ADD_EXECUTABLE( QTLSimMT_pipeline qtlsim_main.cpp ${OPTIONS_SRC} qtlsim_logger.cpp   )
+SET_TARGET_PROPERTIES(QTLSimMT_pipeline PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK;USE_MT;USE_PARALLEL_PIPELINE;USE_BATCH_JOBS;USE_CROSSOVER_EVENT_POOLING" LINK_FLAGS "-Wl,--no-as-needed" )
+TARGET_LINK_LIBRARIES(QTLSimMT_pipeline ${LOCAL_LIBS} ${Boost_CHRONO_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
