Adding 32 bit block size and float programs

--- a/examples/QTLSim/CMakeLists.txt
+++ b/examples/QTLSim/CMakeLists.txt
@@ -109,8 +109,13 @@ TARGET_LINK_LIBRARIES(qtl_cuda_unordered ${CUDA_LOCAL_LIBS})
 ##TARGET_LINK_LIBRARIES(qtl_cuda_unit_ordered_xover2 ${CUDA_LOCAL_LIBS})
 
 CUDA_ADD_EXECUTABLE(QTLSimCuda ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DCROSSOVER_VERSION=5)
+SET_TARGET_PROPERTIES(QTLSimCuda PROPERTIES COMPILE_DEFINITIONS "USE_DOUBLE_REAL")
 SET_TARGET_PROPERTIES(QTLSimCuda PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
 TARGET_LINK_LIBRARIES(QTLSimCuda ${CUDA_LOCAL_LIBS})
+
+CUDA_ADD_EXECUTABLE(QTLSimCuda32 ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DCROSSOVER_VERSION=5)
+SET_TARGET_PROPERTIES(QTLSimCuda32 PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
+TARGET_LINK_LIBRARIES(QTLSimCuda32 ${CUDA_LOCAL_LIBS})
 
 ENDIF(WITH_CUDA_EXAMPLES)
 
@@ -149,8 +154,12 @@ SET(SIM_SRC qtlsim_main.cpp)
 #TARGET_LINK_LIBRARIES(QTLSimMT_debug ${LOCAL_LIBS} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
 
 ADD_EXECUTABLE( QTLSimMT qtlsim_main.cpp ${OPTIONS_SRC} qtlsim_logger.cpp )
-SET_TARGET_PROPERTIES(QTLSimMT PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK;USE_MT;USE_BATCH_JOBS;USE_CROSSOVER_EVENT_POOLING" LINK_FLAGS "-Wl,--no-as-needed" )
+SET_TARGET_PROPERTIES(QTLSimMT PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_64;USE_DOUBLE_REAL;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK;USE_MT;USE_BATCH_JOBS;USE_CROSSOVER_EVENT_POOLING" LINK_FLAGS "-Wl,--no-as-needed" )
 TARGET_LINK_LIBRARIES(QTLSimMT ${LOCAL_LIBS} ${Boost_CHRONO_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
+
+ADD_EXECUTABLE( QTLSimMT32 qtlsim_main.cpp ${OPTIONS_SRC} qtlsim_logger.cpp )
+SET_TARGET_PROPERTIES(QTLSimMT32 PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_32;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK;USE_MT;USE_BATCH_JOBS;USE_CROSSOVER_EVENT_POOLING" LINK_FLAGS "-Wl,--no-as-needed" )
+TARGET_LINK_LIBRARIES(QTLSimMT32 ${LOCAL_LIBS} ${Boost_CHRONO_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
 
 #ADD_EXECUTABLE( QTLSimMT_batch_vector qtlsim_main.cpp ${OPTIONS_SRC} qtlsim_logger.cpp )
 #SET_TARGET_PROPERTIES(QTLSimMT_batch_vector PROPERTIES COMPILE_DEFINITIONS "USE_ROW_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK;USE_MT;USE_BATCH_JOBS;USE_VECTOR_ARRAY" LINK_FLAGS "-Wl,--no-as-needed" )
@@ -164,6 +173,10 @@ ADD_EXECUTABLE( QTLSimMT_pipeline qtlsim_main.cpp ${OPTIONS_SRC} qtlsim_logger.c
 SET_TARGET_PROPERTIES(QTLSimMT_pipeline PROPERTIES COMPILE_DEFINITIONS "USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK;USE_MT;USE_PARALLEL_PIPELINE;USE_BATCH_JOBS;USE_CROSSOVER_EVENT_POOLING" LINK_FLAGS "-Wl,--no-as-needed" )
 TARGET_LINK_LIBRARIES(QTLSimMT_pipeline ${LOCAL_LIBS} ${Boost_CHRONO_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
 
+ADD_EXECUTABLE( QTLSimMT_pipeline32 qtlsim_main.cpp ${OPTIONS_SRC} qtlsim_logger.cpp   )
+SET_TARGET_PROPERTIES(QTLSimMT_pipeline32 PROPERTIES COMPILE_DEFINITIONS "USE_BLOCK_SIZE_32;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK;USE_MT;USE_PARALLEL_PIPELINE;USE_BATCH_JOBS;USE_CROSSOVER_EVENT_POOLING" LINK_FLAGS "-Wl,--no-as-needed" )
+TARGET_LINK_LIBRARIES(QTLSimMT_pipeline32 ${LOCAL_LIBS} ${Boost_CHRONO_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
+
 ADD_EXECUTABLE( QTLSimMT_pipeline_vector qtlsim_main.cpp ${OPTIONS_SRC} qtlsim_logger.cpp   )
 SET_TARGET_PROPERTIES(QTLSimMT_pipeline_vector PROPERTIES COMPILE_DEFINITIONS "USE_VECTOR_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK;USE_MT;USE_PARALLEL_PIPELINE;USE_BATCH_JOBS;USE_CROSSOVER_EVENT_POOLING" LINK_FLAGS "-Wl,--no-as-needed" )
 TARGET_LINK_LIBRARIES(QTLSimMT_pipeline_vector ${LOCAL_LIBS} ${Boost_CHRONO_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
@@ -171,3 +184,7 @@ TARGET_LINK_LIBRARIES(QTLSimMT_pipeline_vector ${LOCAL_LIBS} ${Boost_CHRONO_LIBR
 ADD_EXECUTABLE( QTLSimMT_pipeline_batched qtlsim_main.cpp ${OPTIONS_SRC} qtlsim_logger.cpp   )
 SET_TARGET_PROPERTIES(QTLSimMT_pipeline_batched PROPERTIES COMPILE_DEFINITIONS "USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK;USE_MT;USE_PARALLEL_PIPELINE_BATCH;USE_BATCH_JOBS;USE_CROSSOVER_EVENT_POOLING" LINK_FLAGS "-Wl,--no-as-needed" )
 TARGET_LINK_LIBRARIES(QTLSimMT_pipeline_batched ${LOCAL_LIBS} ${Boost_CHRONO_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
+
+ADD_EXECUTABLE( QTLSimMT_pipeline_batched32 qtlsim_main.cpp ${OPTIONS_SRC} qtlsim_logger.cpp   )
+SET_TARGET_PROPERTIES(QTLSimMT_pipeline_batched32 PROPERTIES COMPILE_DEFINITIONS "USE_BLOCK_SIZE_32;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK;USE_MT;USE_PARALLEL_PIPELINE_BATCH;USE_BATCH_JOBS;USE_CROSSOVER_EVENT_POOLING" LINK_FLAGS "-Wl,--no-as-needed" )
+TARGET_LINK_LIBRARIES(QTLSimMT_pipeline_batched32 ${LOCAL_LIBS} ${Boost_CHRONO_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
