--- a/examples/QTLSim/CMakeLists.txt
+++ b/examples/QTLSim/CMakeLists.txt
@@ -178,11 +178,11 @@ SET_TARGET_PROPERTIES(QTLSimMT_pipeline32 PROPERTIES COMPILE_DEFINITIONS "USE_BL
 TARGET_LINK_LIBRARIES(QTLSimMT_pipeline32 ${LOCAL_LIBS} ${Boost_CHRONO_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
 
 ADD_EXECUTABLE( QTLSimMT_pipeline_vector qtlsim_main.cpp ${OPTIONS_SRC} qtlsim_logger.cpp   )
-SET_TARGET_PROPERTIES(QTLSimMT_pipeline_vector PROPERTIES COMPILE_DEFINITIONS "USE_VECTOR_ALIGNMENT;USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK;USE_MT;USE_PARALLEL_PIPELINE;USE_BATCH_JOBS;USE_CROSSOVER_EVENT_POOLING" LINK_FLAGS "-Wl,--no-as-needed" )
+SET_TARGET_PROPERTIES(QTLSimMT_pipeline_vector PROPERTIES COMPILE_DEFINITIONS "USE_VECTOR_ALIGNMENT;USE_BLOCK_SIZE_64;USE_DOUBLE_REAL;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK;USE_MT;USE_PARALLEL_PIPELINE;USE_BATCH_JOBS;USE_CROSSOVER_EVENT_POOLING" LINK_FLAGS "-Wl,--no-as-needed" )
 TARGET_LINK_LIBRARIES(QTLSimMT_pipeline_vector ${LOCAL_LIBS} ${Boost_CHRONO_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
 
 ADD_EXECUTABLE( QTLSimMT_pipeline_batched qtlsim_main.cpp ${OPTIONS_SRC} qtlsim_logger.cpp   )
-SET_TARGET_PROPERTIES(QTLSimMT_pipeline_batched PROPERTIES COMPILE_DEFINITIONS "USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK;USE_MT;USE_PARALLEL_PIPELINE_BATCH;USE_BATCH_JOBS;USE_CROSSOVER_EVENT_POOLING" LINK_FLAGS "-Wl,--no-as-needed" )
+SET_TARGET_PROPERTIES(QTLSimMT_pipeline_batched PROPERTIES COMPILE_DEFINITIONS "USE_BLOCK_SIZE_64;USE_DOUBLE_REAL;USE_INLINE_DYNAMIC_AND_CLASSIFY;USE_FAST_GENERATOR;BOOST_LOG_DYN_LINK;USE_MT;USE_PARALLEL_PIPELINE_BATCH;USE_BATCH_JOBS;USE_CROSSOVER_EVENT_POOLING" LINK_FLAGS "-Wl,--no-as-needed" )
 TARGET_LINK_LIBRARIES(QTLSimMT_pipeline_batched ${LOCAL_LIBS} ${Boost_CHRONO_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
 
 ADD_EXECUTABLE( QTLSimMT_pipeline_batched32 qtlsim_main.cpp ${OPTIONS_SRC} qtlsim_logger.cpp   )
