Modifications to enable host based discrete distribution

--- a/examples/QTLSim/CMakeLists.txt
+++ b/examples/QTLSim/CMakeLists.txt
@@ -117,6 +117,11 @@ CUDA_ADD_EXECUTABLE(QTLSimCuda32 ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DCROSSOVER_V
 SET_TARGET_PROPERTIES(QTLSimCuda32 PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
 TARGET_LINK_LIBRARIES(QTLSimCuda32 ${CUDA_LOCAL_LIBS})
 
+CUDA_ADD_EXECUTABLE(QTLSimCuda_discrete_host ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DCROSSOVER_VERSION=5)
+SET_TARGET_PROPERTIES(QTLSimCuda PROPERTIES COMPILE_DEFINITIONS "USE_DOUBLE_REAL;USE_HOST_DISCRETE")
+SET_TARGET_PROPERTIES(QTLSimCuda PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
+TARGET_LINK_LIBRARIES(QTLSimCuda ${CUDA_LOCAL_LIBS})
+
 ENDIF(WITH_CUDA_EXAMPLES)
 
 LIST(APPEND LOCAL_LIBS ${COMMON_LIBRARIES})
