Fixing compilation bugs

--- a/examples/QTLSim/CMakeLists.txt
+++ b/examples/QTLSim/CMakeLists.txt
@@ -108,8 +108,7 @@ TARGET_LINK_LIBRARIES(qtl_cuda_unordered ${CUDA_LOCAL_LIBS})
 ##SET_TARGET_PROPERTIES( qtl_cuda_unit_ordered_xover2 PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
 ##TARGET_LINK_LIBRARIES(qtl_cuda_unit_ordered_xover2 ${CUDA_LOCAL_LIBS})
 
-CUDA_ADD_EXECUTABLE(QTLSimCuda ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DCROSSOVER_VERSION=5)
-SET_TARGET_PROPERTIES(QTLSimCuda PROPERTIES COMPILE_DEFINITIONS "USE_DOUBLE_REAL")
+CUDA_ADD_EXECUTABLE(QTLSimCuda ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DCROSSOVER_VERSION=5 -DUSE_DOUBLE_REAL)
 SET_TARGET_PROPERTIES(QTLSimCuda PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
 TARGET_LINK_LIBRARIES(QTLSimCuda ${CUDA_LOCAL_LIBS})
 
@@ -117,10 +116,9 @@ CUDA_ADD_EXECUTABLE(QTLSimCuda32 ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DCROSSOVER_V
 SET_TARGET_PROPERTIES(QTLSimCuda32 PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
 TARGET_LINK_LIBRARIES(QTLSimCuda32 ${CUDA_LOCAL_LIBS})
 
-CUDA_ADD_EXECUTABLE(QTLSimCuda_discrete_host ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DCROSSOVER_VERSION=5)
-SET_TARGET_PROPERTIES(QTLSimCuda PROPERTIES COMPILE_DEFINITIONS "USE_DOUBLE_REAL;USE_HOST_DISCRETE")
-SET_TARGET_PROPERTIES(QTLSimCuda PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
-TARGET_LINK_LIBRARIES(QTLSimCuda ${CUDA_LOCAL_LIBS})
+CUDA_ADD_EXECUTABLE(QTLSimCuda_discrete_host ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DCROSSOVER_VERSION=5 -DUSE_HOST_DISCRETE -DUSE_DOUBLE_REAL)
+SET_TARGET_PROPERTIES(QTLSimCuda_discrete_host PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
+TARGET_LINK_LIBRARIES(QTLSimCuda_discrete_host ${CUDA_LOCAL_LIBS})
 
 ENDIF(WITH_CUDA_EXAMPLES)
 
