Modifications to enable host to generate random numbers and distributions for simulation

--- a/examples/QTLSim/CMakeLists.txt
+++ b/examples/QTLSim/CMakeLists.txt
@@ -120,6 +120,11 @@ CUDA_ADD_EXECUTABLE(QTLSimCuda_discrete_host ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -
 SET_TARGET_PROPERTIES(QTLSimCuda_discrete_host PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
 TARGET_LINK_LIBRARIES(QTLSimCuda_discrete_host ${CUDA_LOCAL_LIBS})
 
+
+CUDA_ADD_EXECUTABLE(QTLSimCuda_host_random ${SIM_SRC} ${OPTIONS_SRC} OPTIONS -DUSE_CUDA_HOST_RANDOM -DUSE_DOUBLE_REAL)
+SET_TARGET_PROPERTIES(QTLSimCuda_host_random PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
+TARGET_LINK_LIBRARIES(QTLSimCuda_host_random ${CUDA_LOCAL_LIBS})
+
 ENDIF(WITH_CUDA_EXAMPLES)
 
 LIST(APPEND LOCAL_LIBS ${COMMON_LIBRARIES})
