Adding initialization to engine pipeline

--- a/examples/QTLSim/CMakeLists.txt
+++ b/examples/QTLSim/CMakeLists.txt
@@ -22,6 +22,7 @@ LIST(APPEND LOCAL_LIBS ${PROJECT_NAME}_utility )
 LIST(APPEND LOCAL_LIBS ${PROJECT_NAME}_popgrowth )
 LIST(APPEND LOCAL_LIBS ${PROJECT_NAME}_config_manager )
 LIST(APPEND LOCAL_LIBS ${PROJECT_NAME}_fitness )
+LIST(APPEND LOCAL_LIBS ${PROJECT_NAME}_initializer )
 
 LIST(APPEND LOCAL_LIBS ${Boost_PROGRAM_OPTIONS_LIBRARY})
 LIST(APPEND LOCAL_LIBS ${Boost_FILESYSTEM_LIBRARY})
